--- a/F1nalLap/src/app/pages/last-temps/last-temps.component.html
+++ b/F1nalLap/src/app/pages/last-temps/last-temps.component.html
@@ -55,7 +55,7 @@
       <section>
         <h2>Temporadas Anteriores</h2>
         <div class="buttons">
-          <mat-form-field class="temporada">
+          <mat-form-field class="temporada" hideRequiredMarker="true">
             <mat-label>Temporada</mat-label>
             <input
               type="number"
