--- a/F1nalLap/src/app/pages/circuits/circuits.component.scss
+++ b/F1nalLap/src/app/pages/circuits/circuits.component.scss
@@ -1,5 +1,6 @@
 .tarjetas-contenedor {
   display: grid;
+  grid-template-columns: repeat(3, 1fr); 
   gap: 2rem;
   padding: 2rem;
   border-radius: 1rem;
@@ -91,7 +92,7 @@
 
 @media (max-width: 768px) {
   .tarjetas-contenedor {
-    grid-template-columns: 1fr;  
+    grid-template-columns: 1fr; 
     padding: 1rem;
     gap: 1rem;
   }
@@ -233,4 +234,56 @@ h3 {
   font-weight: bold;
   padding: 0.15em 0.5em;
   border-radius: 0.4em;
+}
+
+
+
+.graficos-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;  
+  align-items: center;      
+  gap: 5rem; 
+  padding: 0 1rem;        
+  margin: 0 auto;   
+  margin-bottom: 10rem;        
+  width: 100%;              
+}
+
+
+.grafico-pie {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.grafico-pie-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.titulo-grafico {
+  margin-bottom: 0.5rem;
+  text-align: center;
+  font-weight: 600;
+}
+
+::ng-deep .grafico-pie .legend {
+  display: flex !important;
+  justify-content: center !important;
+  width: 100%;
+}
+
+::ng-deep .grafico-pie .legend-labels {
+  display: flex !important;
+  justify-content: center !important;
+  flex-wrap: wrap;
+  width: 100%;
+  gap: 1.5rem;
+}
+
+::ng-deep .grafico-pie .legend-label {
+  text-align: center !important;
+  min-width: 80px;
 }
