Actualización de información

--- a/F1nalLap/src/app/pages/home/home.component.html
+++ b/F1nalLap/src/app/pages/home/home.component.html
@@ -60,11 +60,11 @@
         <ul>
           <li>
             <strong><a href="actual">Temporada Actual:</a></strong>
-            Calendario, escuderías, pilotos y actualizaciones de la temporada en
+            Innovaciones y actualizaciones de la temporada en
             curso.
           </li>
           <li>
-            <strong><a href="last">Últimas Temporadas:</a></strong> Lo mejor de
+            <strong><a href="last">Temporadas anteriores:</a></strong> Lo mejor de
             los últimos años. Recorre grandes batallas y campeonatos
             inolvidables.
           </li>
@@ -73,7 +73,16 @@
             Las eras doradas de la F1, desde Senna a Verstappen.
           </li>
           <li>
-            <strong><a href="/circuits">Circuitos:</a></strong> Explora los
+            <strong><a href="ranking">Clasificación actual:</a></strong>
+            Clasificación actual de pilotos, equipos y resultados por carrera. También 
+            se puede consultar el calendario de la temporada.
+          </li>
+          <li>
+            <strong><a href="comparar">Análisis:</a></strong>
+            Comparación de pilotos y equipos a través de estadísticas y gráficos por temporada.
+          </li>
+          <li>
+            <strong><a href="/circuits">Simulador:</a></strong> Explora los
             trazados más míticos y técnicos del mundo y simula tus stints como
             un estratega de paddock.
           </li>
